2009-01-21  Fatih Aşıcı  <fatih@pardus.org.tr>
		* zorg/probe.py: Fixed framebuffer device node name.
		* data/DriversDB: Added new PCI IDs for nvidia-180.

2008-11-01  Fatih Aşıcı  <fatih@pardus.org.tr>
		* data/DriversDB: Renamed nvidia packages. Added
		new cards.
		* data/modprobe.d/zorg: Added new module names for nvidia.
		* zorg/__init__.py: Bumped version to 1.1.1.

2008-10-04  Fatih Aşıcı  <fatih@pardus.org.tr>
		* zorg/__init__.py: Bumped version to 1.1.
		* zorg/config.py: Added support to create InputDevice
		sections for wacom devices.

2008-09-24  Fatih Aşıcı  <fatih@pardus.org.tr>
		* zorg/probe.py: Added a high timeout value for dbus calls
		since enabling a driver package might take a long time on slow
		machines.

2008-09-17  Fatih Aşıcı  <fatih@pardus.org.tr>
		* AUTHORS, ChangeLog: Added AUTHORS and ChangeLog.