@@ -1,6 +1,6 @@
 #-*- coding: utf-8 -*-
 #
-# Copyright (C) 2007, TUBITAK/UEKAE
+# Copyright (C) 2007-2009, TUBITAK/UEKAE
 #
 # This program is free software; you can redistribute it and/or modify it under
 # the terms of the GNU General Public License as published by the Free
@@ -10,7 +10,7 @@
 # Please read the COPYING file.
 #
 
-__version__ = "1.2"
+__version__ = "1.2.1"
 
 __all__ = ["config",
            "consts",
